--- a/package.json
+++ b/package.json
@@ -75,6 +75,7 @@
     "eslint-config-airbnb": "10.0.1",
     "eslint-plugin-import": "1.13.0",
     "eslint-plugin-jsx-a11y": "2.1.0",
+    "eslint-plugin-jsx-max-len": "1.0.0",
     "eslint-plugin-react": "6.9.0",
     "extract-text-webpack-plugin": "1.0.1",
     "file-loader": "0.8.5",
