--- a/.eslintrc
+++ b/.eslintrc
@@ -24,7 +24,8 @@
     "jsx-max-len",
     "react",
     "compat",
-    "destructuring"
+    "destructuring",
+    "prettier"
   ],
 
   "globals": {
@@ -43,31 +44,23 @@
 
   "extends": [
     "airbnb",
-    "plugin:destructuring/recommended"
+    "plugin:destructuring/recommended",
+    "prettier",
+    "prettier/react"
   ],
 
   "rules": {
+    "prettier/prettier": "warn",
+
     "destructuring/no-rename": "off",
     "destructuring/in-params": "off",
     "compat/compat": "error",
-    "arrow-parens": ["error", "always"],
     "eqeqeq": ["error", "smart"],
-    "quotes": ["error", "single"],
     "camelcase": ["off", {"properties": "never"}],
     // "camelcase": ["error", {"properties": "always"}], This causes errors with mixin properties
     "comma-dangle": ["error", "never"],
     "strict": ["error", "never"], // <-- fix
     "newline-before-return": "error",
-    "no-mixed-operators": [2, {
-      "groups": [
-        ["+", "-", "*", "/", "%", "**"],
-        ["&", "|", "^", "~", "<<", ">>", ">>>"],
-        ["==", "!=", "===", "!==", ">", ">=", "<", "<="],
-        ["&&", "||"],
-        ["in", "instanceof"]
-      ],
-      "allowSamePrecedence": true
-    }],
     "no-mixed-spaces-and-tabs": "error",
     "no-new": "off",
     "no-trailing-spaces": ["error", { "skipBlankLines": false }],
@@ -78,7 +71,6 @@
       "varsIgnorePattern": "^_"
     }],
     "no-use-before-define": "off",
-    "no-multiple-empty-lines": ["error", {"max": 1}],
     // Ternary
     "no-nested-ternary": ["error"],
     "no-unneeded-ternary": ["error"],
@@ -87,9 +79,6 @@
     "keyword-spacing": ["error"],
     "semi": ["error"],
     "space-before-blocks": ["error", "always"],
-    "space-before-function-paren": ["error", {
-      "anonymous": "always", "named": "never"
-    }],
     "spaced-comment": ["error", "always"],
     // "max-len": ["error", 80, 4], TODO: DCOS-914
     "jsx-max-len/jsx-max-len": ["error", {"lineMaxLength": 80, "tabWidth": 2, "maxAttributesPerLine": 1}],
