--- a/package.json
+++ b/package.json
@@ -78,11 +78,13 @@
     "css-loader": "0.23.1",
     "eslint": "3.14.1",
     "eslint-config-airbnb": "10.0.1",
+    "eslint-config-prettier": "^1.5.0",
     "eslint-plugin-compat": "1.0.1",
     "eslint-plugin-destructuring": "2.1.0",
     "eslint-plugin-import": "1.13.0",
     "eslint-plugin-jsx-a11y": "2.1.0",
     "eslint-plugin-jsx-max-len": "1.0.0",
+    "eslint-plugin-prettier": "^2.0.0",
     "eslint-plugin-react": "6.9.0",
     "esprima": "3.1.3",
     "extract-text-webpack-plugin": "1.0.1",
@@ -106,6 +108,7 @@
     "node-libs-browser": "1.0.0",
     "postcss": "5.0.21",
     "postcss-loader": "0.8.2",
+    "prettier": "^0.16.0",
     "purify-css": "1.1.9",
     "raml-validator-loader": "0.1.10",
     "react-hot-loader": "1.3.0",
