--- a/package.json
+++ b/package.json
@@ -77,14 +77,9 @@
     "colors": "1.1.2",
     "css-loader": "0.23.1",
     "eslint": "3.14.1",
-    "eslint-config-airbnb": "10.0.1",
-    "eslint-config-prettier": "^1.5.0",
-    "eslint-plugin-compat": "1.0.1",
-    "eslint-plugin-destructuring": "2.1.0",
+    "eslint-config-dcos": "../javascript",
     "eslint-plugin-import": "1.13.0",
     "eslint-plugin-jsx-a11y": "2.1.0",
-    "eslint-plugin-jsx-max-len": "1.0.0",
-    "eslint-plugin-prettier": "^2.0.0",
     "eslint-plugin-react": "6.9.0",
     "esprima": "3.1.3",
     "extract-text-webpack-plugin": "1.0.1",
@@ -137,6 +132,7 @@
     "build-with-external-plugins": "npm run lint && npm run lint-plugins && npm test && npm run build-assets",
     "lint": "npm run stylelint && npm run eslint",
     "eslint": "bash -c 'opts=$@ ; set -f; if [[ $# -lt 1 ]]; then opts=\"{src/js,plugins,foundation-ui}/**/*.js\"; fi ; eslint --quiet ${opts}' 0",
+    "eslint-config": "bash -c 'opts=$@ ; set -f; if [[ $# -lt 1 ]]; then opts=\"{src/js,plugins,foundation-ui}/**/*.js\"; fi ; eslint --print-config ${opts}' 0",
     "stylelint": "bash -c 'opts=$@ ; set -f; if [[ $# -lt 1 ]]; then opts=\"{src/styles,plugins,foundation-ui}/**/*.less\"; fi ; stylelint ${opts}' 0",
     "lint-plugins": "PLUGINS=$npm_config_externalplugins; npm run eslint -- \"$PLUGINS/**/*.js\" && npm run stylelint -- \"$PLUGINS/**/*.less\"",
     "prebuild": "./scripts/validate-tests",
