--- a/.eslintrc
+++ b/.eslintrc
@@ -31,8 +31,16 @@
   ],
 
   "rules": {
-    "eqeqeq": ["error", "smart"],
+    // DCOS-UI specific
     "camelcase": ["off", {"properties": "never"}], // This causes errors with mixin properties
+    "no-unused-vars": ["error", {
+      "args": "after-used",
+      "argsIgnorePattern": "PluginSDK|^_",
+      "varsIgnorePattern": "^_"
+    }],
+    "react/prop-types": "off", // This causes errors with many
+
+    "eqeqeq": ["error", "smart"],
     "comma-dangle": ["error", "never"],
     "strict": ["error", "never"], // <-- fix
     "newline-before-return": "error",
@@ -40,13 +48,7 @@
     "no-new": "off",
     "no-trailing-spaces": ["error", { "skipBlankLines": false }],
     "no-underscore-dangle": "off",
-    "no-unused-vars": ["error", {
-      "args": "after-used",
-      "argsIgnorePattern": "PluginSDK|^_",
-      "varsIgnorePattern": "^_"
-    }],
     "no-use-before-define": "off",
-    "react/jsx-filename-extension": "off",
     "keyword-spacing": ["error"],
     "semi": ["error"],
     "space-before-blocks": ["error", "always"],
@@ -57,27 +59,17 @@
     }],
 
     // Airbnb overwrites
-    "import/no-extraneous-dependencies": "off",
-    "react/no-find-dom-node": "off",
+    "arrow-body-style": "off",
     "prefer-spread": "off",
+    "prefer-rest-params": "off",
+    "prefer-arrow-callback": "off",
     "space-unary-ops": "off",
     "operator-assignment": "off",
     "object-property-newline": "off",
-    "react/jsx-no-target-blank": "off",
-    "react/no-string-refs": "off",
-    "jsx-a11y/label-has-for": "off",
-    "react/require-extension": "off",
     "no-void": "off",
-    "react/self-closing-comp": "off",
-    "react/no-render-return-value": "off",
     "no-extra-boolean-cast": "off",
-    "react/no-unknown-property": "off",
     "no-var": "off",
-    "arrow-body-style": "off",
     "object-curly-spacing": "off",
-    "react/jsx-closing-bracket-location": "off",
-    "prefer-rest-params": "off",
-    "prefer-arrow-callback": "off",
     "no-param-reassign": "off",
     "prefer-const": ["error", {
       "destructuring": "all",
@@ -92,8 +84,7 @@
     "quote-props": "off",
     "no-restricted-syntax": "off",
     "padded-blocks": "off",
-    "import/no-unresolved": "off",
-    "no-dupe-keys": "off",
+    "no-dupe-keys": "off", // ?
     "newline-per-chained-call": "off",
     "one-var-declaration-per-line": "off",
     "one-var": "off",
@@ -111,41 +102,54 @@
     "max-len": "off",
     "no-useless-constructor": "off",
     "no-return-assign": "off",
-    "react/sort-comp": "off",
-    "react/prefer-es6-class": "off",
-    "react/jsx-boolean-value": "off",
     "arrow-spacing": "off",
     "no-empty": "off",
-    "react/jsx-first-prop-new-line": "off",
-    "react/jsx-no-bind": "off",
-    "react/prefer-stateless-function": "off",
     "no-new-wrappers": "off",
-    "react/jsx-space-before-closing": "off",
-    "jsx-a11y/img-has-alt": "off",
     "space-in-parens": "off",
     "new-cap": "off",
-    "no-extra-label": "off",
-    "no-labels": "off",
+    "no-extra-label": "off", // ?
+    "no-labels": "off", // ?
     "func-names": "off",
     "no-console": "off",
     "no-inner-declarations": "off",
     "dot-notation": "off",
-    "react/jsx-equals-spacing": "off",
-    "react/no-is-mounted": "off",
-    "no-undef": "error",
-    "no-floating-decimal": "off",
-    "no-unreachable": "off",
+    "no-floating-decimal": "off", // ?
+    "no-unreachable": "off", // ?
+    "no-undef": "error", // ?
+
+    "import/no-extraneous-dependencies": "off",
+    "import/no-unresolved": "off",
+
+    "jsx-a11y/label-has-for": "off",
+    "jsx-a11y/img-has-alt": "off",
 
     // React plugin
-    "react/jsx-quotes": "off",
+    "react/jsx-boolean-value": "off",
+    "react/jsx-closing-bracket-location": "off",
+    "react/jsx-equals-spacing": "off",
+    "react/jsx-filename-extension": "off",
+    "react/jsx-first-prop-new-line": "off",
+    "react/jsx-no-bind": "off",
+    "react/jsx-no-target-blank": "off",
     "react/jsx-no-undef": "error",
-    "react/jsx-uses-vars": "error",
-    "react/jsx-sort-props": "off",
+    "react/jsx-quotes": "off",
     "react/jsx-sort-prop-types": ["off", {"ignoreCase": true}],
+    "react/jsx-sort-props": "off",
+    "react/jsx-space-before-closing": "off",
+    "react/jsx-uses-vars": "error",
     "react/no-did-mount-set-state": "error",
     "react/no-did-update-set-state": "error",
+    "react/no-find-dom-node": "off",
+    "react/no-is-mounted": "off",
     "react/no-multi-comp": "error",
-    "react/prop-types": "off", // This causes errors with many
-    "react/react-in-jsx-scope": "error"
+    "react/no-render-return-value": "off",
+    "react/no-string-refs": "off",
+    "react/no-unknown-property": "off",
+    "react/prefer-es6-class": "off",
+    "react/prefer-stateless-function": "off",
+    "react/react-in-jsx-scope": "error",
+    "react/require-extension": "off",
+    "react/self-closing-comp": "off",
+    "react/sort-comp": "off",
   }
 }
