--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
     "autoprefixer": "6.3.6",
     "babel-cli": "6.24.1",
     "babel-core": "6.24.1",
-    "babel-loader": "6.2.8",
+    "babel-loader": "7.0.0",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
     "babel-preset-jest": "19.0.0",
@@ -87,7 +87,7 @@
     "eslint-plugin-prettier": "2.0.1",
     "eslint-plugin-react": "6.9.0",
     "esprima": "3.1.3",
-    "extract-text-webpack-plugin": "1.0.1",
+    "extract-text-webpack-plugin": "2.1.0",
     "file-loader": "0.8.5",
     "glob": "7.0.5",
     "gulp": "3.9.1",
@@ -109,11 +109,11 @@
     "postcss": "5.0.21",
     "postcss-loader": "0.8.2",
     "prettier": "1.2.2",
-    "purify-css": "1.1.9",
+    "purify-css": "^1.2.2",
     "raml-validator-loader": "0.1.10",
     "react-hot-loader": "1.3.1",
     "source-map-loader": "0.1.5",
-    "string-replace-webpack-plugin": "0.0.3",
+    "string-replace-webpack-plugin": "0.1.3",
     "style-loader": "0.13.1",
     "stylelint": "7.2.0",
     "stylelint-config-dcos": "0.0.3",
@@ -121,8 +121,8 @@
     "svg-sprite": "1.3.1",
     "transform-loader": "0.2.3",
     "vinyl": "1.1.1",
-    "webpack": "1.14.0",
-    "webpack-dev-server": "1.14.1",
+    "webpack": "2.5.1",
+    "webpack-dev-server": "2.4.4",
     "webpack-notifier": "1.3.0"
   },
   "scripts": {
