--- a/package.json
+++ b/package.json
@@ -68,7 +68,7 @@
     "babel-loader": "6.2.8",
     "babel-plugin-transform-runtime": "6.23.0",
     "babel-preset-es2015": "6.24.1",
-    "babel-preset-jest": "19.0.0",
+    "babel-preset-jest": "20.0.3",
     "babel-preset-react": "6.5.0",
     "babel-preset-react-hmre": "1.1.1",
     "babel-register": "6.24.1",
@@ -97,7 +97,7 @@
     "html-webpack-plugin": "2.16.0",
     "image-webpack-loader": "1.7.0",
     "jasmine-reporters": "2.1.1",
-    "jest-cli": "16.0.2",
+    "jest-cli": "20.0.3",
     "jest-webpack-alias": "3.3.0",
     "jison-loader": "1.0.0",
     "json-loader": "0.5.4",
@@ -145,7 +145,7 @@
     "serve-notify": "export NOTIFY=true && npm run serve",
     "scaffold": "./node_modules/.bin/gulp ensureConfig && ./node_modules/.bin/gulp ensureDevProxy",
     "start": "npm run check-env && NODE_ENV=development webpack-dev-server --config ./webpack/webpack.dev.babel.js --hot --progress --colors --content-base ./build --host 0.0.0.0 --port $npm_package_config_port",
-    "test": "node jest/gen-config.js && NODE_PATH=node_modules jest --config=jest/config.json --no-cache",
+    "test": "node jest/gen-config.js && NODE_PATH=node_modules jest --config=jest/config.json --no-cache --bail",
     "test:watch": "npm test -- --watch",
     "testing": "NODE_ENV=testing webpack-dev-server --config ./webpack/webpack.dev.babel.js --progress --colors --content-base ./build --port $npm_package_config_port",
     "validate-build": "scripts/validate-build dist/*.js"
