--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "react-addons-css-transition-group": "15.4.1",
     "react-addons-pure-render-mixin": "15.4.1",
     "react-addons-test-utils": "15.4.1",
+    "react-codemirror": "^1.0.0",
     "react-dom": "15.4.1",
     "react-gemini-scrollbar": "2.1.5",
     "react-intl": "2.2.3",
