--- a/package.json
+++ b/package.json
@@ -20,10 +20,7 @@
     "node": "4.4.x",
     "npm": "3.9.x"
   },
-  "browserslist": [
-    "last 2 versions",
-    "ie 11"
-  ],
+  "browserslist": ["last 2 versions", "ie 11"],
   "config": {
     "port": 4200,
     "externalplugins": ""
@@ -39,11 +36,8 @@
     "dcos-dygraphs": "1.1.0-beta.3",
     "deep-equal": "1.0.1",
     "flux": "2.1.1",
-<<<<<<< HEAD
     "intl": "1.2.5",
-=======
-    "js-beautify": "^1.6.14",
->>>>>>> feat(DCOS-15921): Add missing packages to package.json
+    "js-beautify": "1.6.14",
     "less-color-lighten": "0.0.1",
     "lodash.throttle": "4.1.1",
     "md5": "2.1.0",
@@ -58,9 +52,9 @@
     "react-addons-css-transition-group": "15.4.1",
     "react-addons-pure-render-mixin": "15.4.1",
     "react-addons-test-utils": "15.4.1",
-    "react-codemirror": "^1.0.0",
+    "react-codemirror": "0.2.6",
     "react-dom": "15.4.1",
-    "react-element-to-jsx-string": "^10.1.0",
+    "react-element-to-jsx-string": "10.1.0",
     "react-gemini-scrollbar": "2.1.5",
     "react-intl": "2.2.3",
     "react-redux": "4.4.6",
