--- a/package.json
+++ b/package.json
@@ -20,14 +20,16 @@
     "node": "4.4.x",
     "npm": "3.9.x"
   },
-  "browserslist": ["last 2 versions", "ie 11"],
+  "browserslist": [
+    "last 2 versions",
+    "ie 11"
+  ],
   "config": {
     "port": 4200,
     "externalplugins": ""
   },
   "dependencies": {
     "babel-polyfill": "6.23.0",
-    "baconjs": "0.7.95",
     "browser-info": "0.4.0",
     "classnames": "2.2.3",
     "clipboard": "1.5.10",
@@ -61,6 +63,7 @@
     "reactjs-components": "0.16.0-beta.23",
     "reactjs-mixin": "0.0.2",
     "redux": "3.3.1",
+    "rxjs": "5.4.3",
     "tv4": "1.2.7",
     "winston": "2.3.1",
     "winston-daily-rotate-file": "1.4.6"
