--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
   },
   "license": "Apache-2.0",
   "engines": {
-    "node": "4.4.x",
-    "npm": "3.9.x"
+    "node": "8.8.x",
+    "npm": "5.4.x"
   },
   "browserslist": [
     "last 2 versions",
@@ -138,7 +138,6 @@
   "scripts": {
     "check-env": "./scripts/validate-engine-versions",
     "clean": "rm -rf dist",
-    "shrinkwrap": "npm shrinkwrap --dev && ./node_modules/.bin/gulp fixShrinkwrap",
     "preinstall": "./scripts/pre-install",
     "build-assets": "npm run clean && NODE_ENV=production webpack --config ./webpack/webpack.production.babel.js",
     "build": "npm run lint && npm test && npm run build-assets && npm run validate-build",
@@ -151,7 +150,7 @@
     "prebuild": "./scripts/validate-tests",
     "scaffold": "./scripts/scaffold",
     "start": "npm run check-env && NODE_ENV=development webpack-dev-server --config ./webpack/webpack.dev.babel.js --hot --progress --colors --content-base ./build --host 0.0.0.0 --port $npm_package_config_port",
-    "test": "node jest/gen-config.js && NODE_PATH=node_modules jest --config=jest/config.json --no-cache",
+    "test": "LANG=en.UTF-8; node jest/gen-config.js && NODE_PATH=node_modules jest --config=jest/config.json --no-cache",
     "test:watch": "npm test -- --watch",
     "testing": "NODE_ENV=testing webpack-dev-server --config ./webpack/webpack.dev.babel.js --progress --colors --content-base ./build --port $npm_package_config_port",
     "validate-build": "scripts/validate-build dist/*.js"
